# ChatExample

Chat/: Chat.aps  Chat.sln  Chat.vcxproj  Chat.vcxproj.filters  ChatServer.cpp  ChatServer.h  Logger.h  Server.cpp  Server.h  Session.cpp  Session.h  User.cpp  User.h  main.cpp  resource.h
Chat/logs/: sample_0.txt
ChatClient/: ChatClient.cpp  ChatClient.sln  ChatClient.vcxproj  ChatClient.vcxproj.filters
ChatClientV2/: CMakeLists.txt  connect.cpp  connect.h  loginform.cpp  loginform.h  loginform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationform.cpp  registrationform.h  registrationform.ui  startscreen.cpp  startscreen.h  startscreen.ui
ChatClientV2/sources/: main.cpp  mainwindow.h
